--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "versionio"
-version = "0.1.0"
+version = "0.1.1"
 description = "Drop-in replacement for open() with automatic file versioning"
 readme = "README.md"
-authors = [{name = "Your Name", email = "your@email.com"}]
+authors = [{name = "Nikhil Shekhawat", email = "nikhilshekhawat1999@gmail.com"}]
 license = {text = "MIT"}
 requires-python = ">=3.8"
 dependencies = []
